2005-05-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* e-book-backend-gal.c (last_mod_time_populate)(get_time_stamp): 
	Updates the EContact with the last modified time [ REV field ]
	Patch submitted by Sushma.
	(gal_reconnect) : Added some robustness.

2005-05-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Check for latest libsoup and use it. This might not be
	needed once evolution is fixed to use a proper libsoup.

2005-05-11  Shakti Sen  <shprasad@novell.com>

	* storage/exchange-autoconfig-wizard.c:
	Fixed the build failure by removing EvolutionWizard.

2005-05-11  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (func_match): Forming the search
	filter for contacts with nickname property.

	* addressbook/e-book-backend-gal.c (func_is_or_begins_with): Added 
	mailNickname (alias) attribute to LDAP search filter.
	Also mapping mailNickname to E_CONTACT_NICKNAME in structure prop_info.
	Fixes #255756.

2005-05-10  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Using "sync_offline" in 
	exchange_conf_entries[], instead of "offline_sync".

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_connect): Added argument
	server name to error message.

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_connect): Corrected the
	quota warning message and marked it for translation. Fixes #270363.

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-autoconfig.c (validate): Removed the hard coded support url
	from translateable error message. Fixes #272514

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_removed): Displaying 
	separate warning messages for accoount deletion and account removal.
	Fixes #274066

2005-05-09  Vivek Jain  <jvivek@novell.com>

	**Fixes #273846
		#273878
	* calendar/e-cal-backend-exchange.c: (get_attach_file_contents),